--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           yarn global add firebase-tools
           echo "::add-path::$(yarn global bin)"
+        env:
+           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - name: setup fastlane
         run: bundle install
       - name: distribute to firebase
